parser.output
Terminals unused in grammar

   NUMBER
   DE
   IDE
   COMMENTLINE
   COMMENTMYLTY


State 169 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt program
    2        | %empty

    3 stmt: expr SEMICOLON
    4     | ifstmt
    5     | whilestmt
    6     | forstmt
    7     | returnstmt
    8     | BREAK SEMICOLON
    9     | CONTINUE SEMICOLON
   10     | block
   11     | funcdef
   12     | SEMICOLON
   13     | error SEMICOLON

   14 expr: assignexpr
   15     | expr PLUS expr
   16     | expr MINUS expr
   17     | expr MUL expr
   18     | expr DIVIDE expr
   19     | expr MODULO expr
   20     | expr GT expr
   21     | expr GE expr
   22     | expr LT expr
   23     | expr LE expr
   24     | expr EQ expr
   25     | expr NE expr
   26     | expr AND M expr
   27     | expr OR M expr
   28     | term

   29 term: LEFTPARENTHESIS expr RIGHTPARENTHESIS
   30     | MINUS expr
   31     | NOT expr
   32     | PLUSx2 lvalue
   33     | lvalue PLUSx2
   34     | MINUSx2 lvalue
   35     | lvalue MINUSx2
   36     | primary

   37 $@1: %empty

   38 assignexpr: lvalue ASSIGN $@1 expr

   39 lvalue: ID
   40       | LOCAL ID
   41       | DOUBLEDOTx2 ID
   42       | tableitem

   43 tableitem: lvalue DOT ID
   44          | lvalue LEFTSB expr RIGHTSB
   45          | call DOT ID
   46          | call LEFTSB expr RIGHTSB

   47 call: call LEFTPARENTHESIS elist RIGHTPARENTHESIS
   48     | lvalue callsuffix
   49     | LEFTPARENTHESIS funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

   50 primary: lvalue
   51        | call
   52        | tablemake
   53        | LEFTPARENTHESIS funcdef RIGHTPARENTHESIS
   54        | const

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: LEFTPARENTHESIS elist RIGHTPARENTHESIS

   58 methodcall: DOTx2 ID LEFTPARENTHESIS elist RIGHTPARENTHESIS

   59 elist: expr
   60      | elist COMMA expr
   61      | %empty

   62 tablemake: LEFTSB elist RIGHTSB
   63          | LEFTSB indexed RIGHTSB

   64 indexed: indexedelem
   65        | indexed COMMA indexedelem

   66 $@2: %empty

   67 $@3: %empty

   68 indexedelem: LEFTB $@2 expr DOUBLEDOT $@3 expr RIGHTB

   69 block_stmt: block_stmt stmt
   70           | %empty

   71 $@4: %empty

   72 block: LEFTB $@4 block_stmt RIGHTB

   73 funcname: ID
   74         | %empty

   75 funcprefix: FUNCTION funcname

   76 $@5: %empty

   77 funcargs: LEFTPARENTHESIS $@5 idlist RIGHTPARENTHESIS

   78 funcblockstart: %empty

   79 funcblockend: %empty

   80 funcbody: funcblockstart block funcblockend

   81 funcdef: funcprefix funcargs funcbody

   82 const: INTEGER
   83      | REAL
   84      | STRING
   85      | NIL
   86      | TRUE
   87      | FALSE

   88 idlist: ID
   89       | idlist COMMA ID
   90       | %empty

   91 ifprefix: IF LEFTPARENTHESIS expr RIGHTPARENTHESIS

   92 else: ELSE

   93 $@6: %empty

   94 elsestmt: else $@6 stmt
   95         | %empty

   96 $@7: %empty

   97 $@8: %empty

   98 ifstmt: ifprefix $@7 stmt $@8 elsestmt

   99 whilestart: WHILE

  100 whilecond: LEFTPARENTHESIS expr RIGHTPARENTHESIS

  101 loopstart: %empty

  102 loopend: %empty

  103 $@9: %empty

  104 $@10: %empty

  105 loopstmt: loopstart $@9 stmt $@10 loopend

  106 whilestmt: whilestart whilecond loopstmt

  107 N: %empty

  108 M: %empty

  109 forprefix: FOR LEFTPARENTHESIS elist SEMICOLON M expr SEMICOLON

  110 forstmt: forprefix N elist RIGHTPARENTHESIS N loopstmt N

  111 $@11: %empty

  112 returnstmt: RETURN $@11 expr SEMICOLON
  113           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256) 13
BREAK (258) 8
CONTINUE (259) 9
AND (260) 26
OR (261) 27
NOT (262) 31
ID (263) 39 40 41 43 45 58 73 88 89
LOCAL (264) 40
NUMBER (265)
STRING (266) 84
NIL (267) 85
TRUE (268) 86
FALSE (269) 87
IF (270) 91
ELSE (271) 92
WHILE (272) 99
FOR (273) 109
RETURN (274) 112 113
SEMICOLON (275) 3 8 9 12 13 109 112 113
FUNCTION (276) 75
DIVIDE (277) 18
DOT (278) 43 45
DOTx2 (279) 58
ASSIGN (280) 38
PLUS (281) 15
MINUS (282) 16 30
MUL (283) 17
DE (284)
IDE (285)
MODULO (286) 19
EQ (287) 24
NE (288) 25
PLUSx2 (289) 32 33
MINUSx2 (290) 34 35
GT (291) 20
LT (292) 22
GE (293) 21
LE (294) 23
LEFTB (295) 68 72
RIGHTB (296) 68 72
LEFTSB (297) 44 46 62 63
RIGHTSB (298) 44 46 62 63
LEFTPARENTHESIS (299) 29 47 49 53 57 58 77 91 100 109
RIGHTPARENTHESIS (300) 29 47 49 53 57 58 77 91 100 110
COMMA (301) 60 65 89
DOUBLEDOT (302) 68
DOUBLEDOTx2 (303) 41
COMMENTLINE (304)
COMMENTMYLTY (305)
INTEGER (306) 82
REAL (307) 83
UMINUS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2, on right: 0 1
stmt (56)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 1 69 94 98 105
expr (57)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    3 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 38 44 46 59 60
    68 91 100 109 112
term (58)
    on left: 29 30 31 32 33 34 35 36, on right: 28
assignexpr (59)
    on left: 38, on right: 14
$@1 (60)
    on left: 37, on right: 38
lvalue (61)
    on left: 39 40 41 42, on right: 32 33 34 35 38 43 44 48 50
tableitem (62)
    on left: 43 44 45 46, on right: 42
call (63)
    on left: 47 48 49, on right: 45 46 47 51
primary (64)
    on left: 50 51 52 53 54, on right: 36
callsuffix (65)
    on left: 55 56, on right: 48
normcall (66)
    on left: 57, on right: 55
methodcall (67)
    on left: 58, on right: 56
elist (68)
    on left: 59 60 61, on right: 47 49 57 58 60 62 109 110
tablemake (69)
    on left: 62 63, on right: 52
indexed (70)
    on left: 64 65, on right: 63 65
indexedelem (71)
    on left: 68, on right: 64 65
$@2 (72)
    on left: 66, on right: 68
$@3 (73)
    on left: 67, on right: 68
block_stmt (74)
    on left: 69 70, on right: 69 72
block (75)
    on left: 72, on right: 10 80
$@4 (76)
    on left: 71, on right: 72
funcname (77)
    on left: 73 74, on right: 75
funcprefix (78)
    on left: 75, on right: 81
funcargs (79)
    on left: 77, on right: 81
$@5 (80)
    on left: 76, on right: 77
funcblockstart (81)
    on left: 78, on right: 80
funcblockend (82)
    on left: 79, on right: 80
funcbody (83)
    on left: 80, on right: 81
funcdef (84)
    on left: 81, on right: 11 49 53
const (85)
    on left: 82 83 84 85 86 87, on right: 54
idlist (86)
    on left: 88 89 90, on right: 77 89
ifprefix (87)
    on left: 91, on right: 98
else (88)
    on left: 92, on right: 94
elsestmt (89)
    on left: 94 95, on right: 98
$@6 (90)
    on left: 93, on right: 94
ifstmt (91)
    on left: 98, on right: 4
$@7 (92)
    on left: 96, on right: 98
$@8 (93)
    on left: 97, on right: 98
whilestart (94)
    on left: 99, on right: 106
whilecond (95)
    on left: 100, on right: 106
loopstart (96)
    on left: 101, on right: 105
loopend (97)
    on left: 102, on right: 105
loopstmt (98)
    on left: 105, on right: 106 110
$@9 (99)
    on left: 103, on right: 105
$@10 (100)
    on left: 104, on right: 105
whilestmt (101)
    on left: 106, on right: 5
N (102)
    on left: 107, on right: 110
M (103)
    on left: 108, on right: 26 27 109
forprefix (104)
    on left: 109, on right: 110
forstmt (105)
    on left: 110, on right: 6
returnstmt (106)
    on left: 112 113, on right: 7
$@11 (107)
    on left: 111, on right: 112


State 0

    0 $accept: . program $end

    error            shift, and go to state 1
    BREAK            shift, and go to state 2
    CONTINUE         shift, and go to state 3
    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    IF               shift, and go to state 11
    WHILE            shift, and go to state 12
    FOR              shift, and go to state 13
    RETURN           shift, and go to state 14
    SEMICOLON        shift, and go to state 15
    FUNCTION         shift, and go to state 16
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTB            shift, and go to state 20
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    $end  reduce using rule 2 (program)

    program     go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


State 1

   13 stmt: error . SEMICOLON

    SEMICOLON  shift, and go to state 47


State 2

    8 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 48


State 3

    9 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 4

   31 term: NOT . expr

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 50
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    const       go to state 39


State 5

   39 lvalue: ID .

    $default  reduce using rule 39 (lvalue)


State 6

   40 lvalue: LOCAL . ID

    ID  shift, and go to state 51


State 7

   84 const: STRING .

    $default  reduce using rule 84 (const)


State 8

   85 const: NIL .

    $default  reduce using rule 85 (const)


State 9

   86 const: TRUE .

    $default  reduce using rule 86 (const)


State 10

   87 const: FALSE .

    $default  reduce using rule 87 (const)


State 11

   91 ifprefix: IF . LEFTPARENTHESIS expr RIGHTPARENTHESIS

    LEFTPARENTHESIS  shift, and go to state 52


State 12

   99 whilestart: WHILE .

    $default  reduce using rule 99 (whilestart)


State 13

  109 forprefix: FOR . LEFTPARENTHESIS elist SEMICOLON M expr SEMICOLON

    LEFTPARENTHESIS  shift, and go to state 53


State 14

  112 returnstmt: RETURN . $@11 expr SEMICOLON
  113           | RETURN . SEMICOLON

    SEMICOLON  shift, and go to state 54

    $default  reduce using rule 111 ($@11)

    $@11  go to state 55


State 15

   12 stmt: SEMICOLON .

    $default  reduce using rule 12 (stmt)


State 16

   75 funcprefix: FUNCTION . funcname

    ID  shift, and go to state 56

    $default  reduce using rule 74 (funcname)

    funcname  go to state 57


State 17

   30 term: MINUS . expr

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 58
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    const       go to state 39


State 18

   32 term: PLUSx2 . lvalue

    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    LEFTPARENTHESIS  shift, and go to state 59
    DOUBLEDOTx2      shift, and go to state 23

    lvalue     go to state 60
    tableitem  go to state 32
    call       go to state 61


State 19

   34 term: MINUSx2 . lvalue

    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    LEFTPARENTHESIS  shift, and go to state 59
    DOUBLEDOTx2      shift, and go to state 23

    lvalue     go to state 62
    tableitem  go to state 32
    call       go to state 61


State 20

   72 block: LEFTB . $@4 block_stmt RIGHTB

    $default  reduce using rule 71 ($@4)

    $@4  go to state 63


State 21

   62 tablemake: LEFTSB . elist RIGHTSB
   63          | LEFTSB . indexed RIGHTSB

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTB            shift, and go to state 64
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    $default  reduce using rule 61 (elist)

    expr         go to state 65
    term         go to state 29
    assignexpr   go to state 30
    lvalue       go to state 31
    tableitem    go to state 32
    call         go to state 33
    primary      go to state 34
    elist        go to state 66
    tablemake    go to state 35
    indexed      go to state 67
    indexedelem  go to state 68
    const        go to state 39


State 22

   29 term: LEFTPARENTHESIS . expr RIGHTPARENTHESIS
   49 call: LEFTPARENTHESIS . funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS
   53 primary: LEFTPARENTHESIS . funcdef RIGHTPARENTHESIS

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    FUNCTION         shift, and go to state 16
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 69
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    funcprefix  go to state 37
    funcdef     go to state 70
    const       go to state 39


State 23

   41 lvalue: DOUBLEDOTx2 . ID

    ID  shift, and go to state 71


State 24

   82 const: INTEGER .

    $default  reduce using rule 82 (const)


State 25

   83 const: REAL .

    $default  reduce using rule 83 (const)


State 26

    0 $accept: program . $end

    $end  shift, and go to state 72


State 27

    1 program: stmt . program

    error            shift, and go to state 1
    BREAK            shift, and go to state 2
    CONTINUE         shift, and go to state 3
    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    IF               shift, and go to state 11
    WHILE            shift, and go to state 12
    FOR              shift, and go to state 13
    RETURN           shift, and go to state 14
    SEMICOLON        shift, and go to state 15
    FUNCTION         shift, and go to state 16
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTB            shift, and go to state 20
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    $end  reduce using rule 2 (program)

    program     go to state 73
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    block       go to state 36
    funcprefix  go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


State 28

    3 stmt: expr . SEMICOLON
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MUL expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . AND M expr
   27     | expr . OR M expr

    AND        shift, and go to state 74
    OR         shift, and go to state 75
    SEMICOLON  shift, and go to state 76
    DIVIDE     shift, and go to state 77
    PLUS       shift, and go to state 78
    MINUS      shift, and go to state 79
    MUL        shift, and go to state 80
    MODULO     shift, and go to state 81
    EQ         shift, and go to state 82
    NE         shift, and go to state 83
    GT         shift, and go to state 84
    LT         shift, and go to state 85
    GE         shift, and go to state 86
    LE         shift, and go to state 87


State 29

   28 expr: term .

    $default  reduce using rule 28 (expr)


State 30

   14 expr: assignexpr .

    $default  reduce using rule 14 (expr)


State 31

   33 term: lvalue . PLUSx2
   35     | lvalue . MINUSx2
   38 assignexpr: lvalue . ASSIGN $@1 expr
   43 tableitem: lvalue . DOT ID
   44          | lvalue . LEFTSB expr RIGHTSB
   48 call: lvalue . callsuffix
   50 primary: lvalue .

    DOT              shift, and go to state 88
    DOTx2            shift, and go to state 89
    ASSIGN           shift, and go to state 90
    PLUSx2           shift, and go to state 91
    MINUSx2          shift, and go to state 92
    LEFTSB           shift, and go to state 93
    LEFTPARENTHESIS  shift, and go to state 94

    $default  reduce using rule 50 (primary)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 32

   42 lvalue: tableitem .

    $default  reduce using rule 42 (lvalue)


State 33

   45 tableitem: call . DOT ID
   46          | call . LEFTSB expr RIGHTSB
   47 call: call . LEFTPARENTHESIS elist RIGHTPARENTHESIS
   51 primary: call .

    DOT              shift, and go to state 98
    LEFTSB           shift, and go to state 99
    LEFTPARENTHESIS  shift, and go to state 100

    $default  reduce using rule 51 (primary)


State 34

   36 term: primary .

    $default  reduce using rule 36 (term)


State 35

   52 primary: tablemake .

    $default  reduce using rule 52 (primary)


State 36

   10 stmt: block .

    $default  reduce using rule 10 (stmt)


State 37

   81 funcdef: funcprefix . funcargs funcbody

    LEFTPARENTHESIS  shift, and go to state 101

    funcargs  go to state 102


State 38

   11 stmt: funcdef .

    $default  reduce using rule 11 (stmt)


State 39

   54 primary: const .

    $default  reduce using rule 54 (primary)


State 40

   98 ifstmt: ifprefix . $@7 stmt $@8 elsestmt

    $default  reduce using rule 96 ($@7)

    $@7  go to state 103


State 41

    4 stmt: ifstmt .

    $default  reduce using rule 4 (stmt)


State 42

  106 whilestmt: whilestart . whilecond loopstmt

    LEFTPARENTHESIS  shift, and go to state 104

    whilecond  go to state 105


State 43

    5 stmt: whilestmt .

    $default  reduce using rule 5 (stmt)


State 44

  110 forstmt: forprefix . N elist RIGHTPARENTHESIS N loopstmt N

    $default  reduce using rule 107 (N)

    N  go to state 106


State 45

    6 stmt: forstmt .

    $default  reduce using rule 6 (stmt)


State 46

    7 stmt: returnstmt .

    $default  reduce using rule 7 (stmt)


State 47

   13 stmt: error SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 48

    8 stmt: BREAK SEMICOLON .

    $default  reduce using rule 8 (stmt)


State 49

    9 stmt: CONTINUE SEMICOLON .

    $default  reduce using rule 9 (stmt)


State 50

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MUL expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . AND M expr
   27     | expr . OR M expr
   31 term: NOT expr .

    $default  reduce using rule 31 (term)


State 51

   40 lvalue: LOCAL ID .

    $default  reduce using rule 40 (lvalue)


State 52

   91 ifprefix: IF LEFTPARENTHESIS . expr RIGHTPARENTHESIS

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 107
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    const       go to state 39


State 53

  109 forprefix: FOR LEFTPARENTHESIS . elist SEMICOLON M expr SEMICOLON

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    $default  reduce using rule 61 (elist)

    expr        go to state 65
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    elist       go to state 108
    tablemake   go to state 35
    const       go to state 39


State 54

  113 returnstmt: RETURN SEMICOLON .

    $default  reduce using rule 113 (returnstmt)


State 55

  112 returnstmt: RETURN $@11 . expr SEMICOLON

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 109
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    const       go to state 39


State 56

   73 funcname: ID .

    $default  reduce using rule 73 (funcname)


State 57

   75 funcprefix: FUNCTION funcname .

    $default  reduce using rule 75 (funcprefix)


State 58

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MUL expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . AND M expr
   27     | expr . OR M expr
   30 term: MINUS expr .

    $default  reduce using rule 30 (term)


State 59

   49 call: LEFTPARENTHESIS . funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

    FUNCTION  shift, and go to state 16

    funcprefix  go to state 37
    funcdef     go to state 110


State 60

   32 term: PLUSx2 lvalue .
   43 tableitem: lvalue . DOT ID
   44          | lvalue . LEFTSB expr RIGHTSB
   48 call: lvalue . callsuffix

    DOT              shift, and go to state 88
    DOTx2            shift, and go to state 89
    LEFTSB           shift, and go to state 93
    LEFTPARENTHESIS  shift, and go to state 94

    $default  reduce using rule 32 (term)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 61

   45 tableitem: call . DOT ID
   46          | call . LEFTSB expr RIGHTSB
   47 call: call . LEFTPARENTHESIS elist RIGHTPARENTHESIS

    DOT              shift, and go to state 98
    LEFTSB           shift, and go to state 99
    LEFTPARENTHESIS  shift, and go to state 100


State 62

   34 term: MINUSx2 lvalue .
   43 tableitem: lvalue . DOT ID
   44          | lvalue . LEFTSB expr RIGHTSB
   48 call: lvalue . callsuffix

    DOT              shift, and go to state 88
    DOTx2            shift, and go to state 89
    LEFTSB           shift, and go to state 93
    LEFTPARENTHESIS  shift, and go to state 94

    $default  reduce using rule 34 (term)

    callsuffix  go to state 95
    normcall    go to state 96
    methodcall  go to state 97


State 63

   72 block: LEFTB $@4 . block_stmt RIGHTB

    $default  reduce using rule 70 (block_stmt)

    block_stmt  go to state 111


State 64

   68 indexedelem: LEFTB . $@2 expr DOUBLEDOT $@3 expr RIGHTB

    $default  reduce using rule 66 ($@2)

    $@2  go to state 112


State 65

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MUL expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . AND M expr
   27     | expr . OR M expr
   59 elist: expr .

    AND     shift, and go to state 74
    OR      shift, and go to state 75
    DIVIDE  shift, and go to state 77
    PLUS    shift, and go to state 78
    MINUS   shift, and go to state 79
    MUL     shift, and go to state 80
    MODULO  shift, and go to state 81
    EQ      shift, and go to state 82
    NE      shift, and go to state 83
    GT      shift, and go to state 84
    LT      shift, and go to state 85
    GE      shift, and go to state 86
    LE      shift, and go to state 87

    $default  reduce using rule 59 (elist)


State 66

   60 elist: elist . COMMA expr
   62 tablemake: LEFTSB elist . RIGHTSB

    RIGHTSB  shift, and go to state 113
    COMMA    shift, and go to state 114


State 67

   63 tablemake: LEFTSB indexed . RIGHTSB
   65 indexed: indexed . COMMA indexedelem

    RIGHTSB  shift, and go to state 115
    COMMA    shift, and go to state 116


State 68

   64 indexed: indexedelem .

    $default  reduce using rule 64 (indexed)


State 69

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MUL expr
   18     | expr . DIVIDE expr
   19     | expr . MODULO expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . AND M expr
   27     | expr . OR M expr
   29 term: LEFTPARENTHESIS expr . RIGHTPARENTHESIS

    AND               shift, and go to state 74
    OR                shift, and go to state 75
    DIVIDE            shift, and go to state 77
    PLUS              shift, and go to state 78
    MINUS             shift, and go to state 79
    MUL               shift, and go to state 80
    MODULO            shift, and go to state 81
    EQ                shift, and go to state 82
    NE                shift, and go to state 83
    GT                shift, and go to state 84
    LT                shift, and go to state 85
    GE                shift, and go to state 86
    LE                shift, and go to state 87
    RIGHTPARENTHESIS  shift, and go to state 117


State 70

   49 call: LEFTPARENTHESIS funcdef . RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS
   53 primary: LEFTPARENTHESIS funcdef . RIGHTPARENTHESIS

    RIGHTPARENTHESIS  shift, and go to state 118


State 71

   41 lvalue: DOUBLEDOTx2 ID .

    $default  reduce using rule 41 (lvalue)


State 72

    0 $accept: program $end .

    $default  accept


State 73

    1 program: stmt program .

    $default  reduce using rule 1 (program)


State 74

   26 expr: expr AND . M expr

    $default  reduce using rule 108 (M)

    M  go to state 119


State 75

   27 expr: expr OR . M expr

    $default  reduce using rule 108 (M)

    M  go to state 120


State 76

    3 stmt: expr SEMICOLON .

    $default  reduce using rule 3 (stmt)


State 77

   18 expr: expr DIVIDE . expr

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 121
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    const       go to state 39


State 78

   15 expr: expr PLUS . expr

    NOT              shift, and go to state 4
    ID               shift, and go to state 5
    LOCAL            shift, and go to state 6
    STRING           shift, and go to state 7
    NIL              shift, and go to state 8
    TRUE             shift, and go to state 9
    FALSE            shift, and go to state 10
    MINUS            shift, and go to state 17
    PLUSx2           shift, and go to state 18
    MINUSx2          shift, and go to state 19
    LEFTSB           shift, and go to state 21
    LEFTPARENTHESIS  shift, and go to state 22
    DOUBLEDOTx2      shift, and go to state 23
    INTEGER          shift, and go to state 24
    REAL             shift, and go to state 25

    expr        go to state 122
    term        go to state 29
    assignexpr  go to state 30
    lvalue      go to state 31
    tableitem   go to state 32
    call        go to state 33
    primary     go to state 34
    tablemake   go to state 35
    const       go to state 39


State 79

   16 expr: expr MINUS . expr
